--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://1kangyun1.github.io/react-website",
+  "homepage": "http://1kangyun1.github.io",
   "name": "react-website",
   "version": "0.1.0",
   "private": true,
